--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Holo.Light">
         <activity
-            android:name=".MainActivity"
+            android:name=".interfaces.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,19 +17,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Math"
+            android:name=".interfaces.Math"
             android:label="Математика"></activity>
         <activity
-            android:name=".Phys"
+            android:name=".interfaces.Phys"
             android:label="Физика"></activity>
         <activity
-            android:name=".Info"
+            android:name=".interfaces.Info"
             android:label="Информатика"></activity>
         <activity
-            android:name=".TheorAlg"
+            android:name=".interfaces.TheorAlg"
             android:label="Алгебра"></activity>
         <activity
-            android:name=".TheorGem"
+            android:name=".interfaces.TheorGem"
             android:label="Геометрия"></activity>
     </application>
 
