--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity
             android:name="KorenStepen"
             android:label="Корень и степень числа"></activity>
+        <activity
+            android:name="Urav"
+            android:label="Решение уравнений"></activity>
     </application>
 
 </manifest>
