--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "iktaniyalol.ru.technicalassistant"
         minSdkVersion 19
@@ -15,6 +15,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '28.0.0 rc2'
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -23,7 +24,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
-}
-
-repositories {
+    implementation project(':GraphView')
+    implementation files('libs/graphlib.jar')
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
