--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation 'com.google.android.gms:play-services-identity:15.0.1'
     implementation project(':GraphView')
     implementation files('libs/graphlib.jar')
     implementation 'com.android.support:recyclerview-v7:27.1.1'
