--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="iktaniyalol.ru.technicalassistant.interfaces">
 
+    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -61,6 +63,10 @@
         <activity
             android:name="Auth"
             android:label="Авторизация"></activity>
+        <activity
+            android:name="Profile"
+            android:label="Ваш профиль"></activity>
+
     </application>
 
 
